[gd_scene load_steps=2 format=3 uid="uid://cvtjd61ejtblt"]

[ext_resource type="Script" uid="uid://dsvpjf57ku2hi" path="res://ui/in-game/debug_layer.gd" id="1_a264g"]

[node name="DebugLayer" type="CanvasLayer"]
script = ExtResource("1_a264g")

[node name="MarginContainer" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.65098)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = -5

[node name="FPS" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FPS: 123"

[node name="Timescale" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Timescale: 1.0"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music: music-1"

[node name="MusicLayer" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music layer: layer"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayingSFX" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Playing SFX: 123"

[node name="SFXCache" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cached SFX: 123"

[node name="PlayingEffects" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Playing effects: 123"

[node name="EffectsCache" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cached effects: 123"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnnouncerCounter" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Announcer cpt: 0"

[node name="Mods" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = -5
